--- a/product11.html
+++ b/product11.html
@@ -243,50 +243,51 @@
                         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour">
                             <div class="accordion-body">
                                 <div class="comment">
-                                    <span>Queen：味道好聞，會再回購！</span>
+                                    <div class="comment">
+                                    <span>Victor：味道好聞，會再回購！</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                             class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">90&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
-                                    <span>Jade：味道很香，是我喜歡的，推推。</span>
+                                    <span>Bin：味道很香，是我喜歡的，推推。</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                             class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">85&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
-                                    <span>Alicia：什麼狗屁味道。</span>
+                                    <span>Albert：什麼狗屁味道。</span>
                                     <div>
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star">
+                                        </i><p nowrap class="point-style">10&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
-                                    <span>Micky：我喜歡。</span>
+                                    <span>Max：我喜歡。</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i><i class="fas fa-star"></i>
+                                            class="fas fa-star"></i><i class="fas fa-star"></i><p nowrap class="point-style">86&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
-                                    <span>Pesaya：讚。</span>
+                                    <span>Peter：讚。</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                             class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">99&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
-                                    <span>Jacky：我覺得還不錯哦。</span>
+                                    <span>Jack：我覺得還不錯哦。</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">92&nbsp;分</p>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
