--- a/product12.html
+++ b/product12.html
@@ -237,51 +237,51 @@
                         </h2>
                         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour">
                             <div class="accordion-body">
-                                <div class="comment">
-                                    <span>Senna：味道好聞，會再回購！</span>
+<div class="comment">
+                                    <span>Victor：味道好聞，會再回購！</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                             class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">90&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
-                                    <span>Lux：味道很香，是我喜歡的，推推。</span>
+                                    <span>Bin：味道很香，是我喜歡的，推推。</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                             class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">85&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
-                                    <span>Sinny：什麼狗屁味道。</span>
+                                    <span>Albert：什麼狗屁味道。</span>
                                     <div>
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star">
+                                        </i><p nowrap class="point-style">10&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
-                                    <span>Queen：我喜歡。</span>
+                                    <span>Max：我喜歡。</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i><i class="fas fa-star"></i>
+                                            class="fas fa-star"></i><i class="fas fa-star"></i><p nowrap class="point-style">86&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
-                                    <span>Samanda：讚。</span>
+                                    <span>Peter：讚。</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                             class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">99&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
-                                    <span>Leona：我覺得還不錯哦。</span>
+                                    <span>Jack：我覺得還不錯哦。</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">92&nbsp;分</p>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
