--- a/member.html
+++ b/member.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/member.css">
-    <script src=./script/member.js  defer></script>
+    <script src=./script/member.js defer></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--匯入Boostrap CSS-->
@@ -39,7 +39,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@1,200&display=swap"
         rel="stylesheet">
     <!--匯入GOOGLE FONT-->
-      <link rel="icon" href="./picture/PF.jpg" type="image/x-icon">
+    <link rel="icon" href="./picture/PF.jpg" type="image/x-icon">
     <title>PF. Dior</title>
 </head>
 <style>
@@ -107,7 +107,7 @@
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
                             style="padding-left: 70px;position: relative;height: 50px;">
                         <button class="btn btn-outline-success" type="submit" style="position: absolute;">
-                           <i class="fas fa-search"></i>
+                            <i class="fas fa-search"></i>
                         </button>
                         <a href=#><i class="far fa-heart"></i></a>
                         <a href=#><i class="fas fa-shopping-cart"></i></a>
@@ -129,49 +129,80 @@
 
     <div class="b">
         <p class="topic">會員資料編輯</p>
-        <p style="text-align: left; font-size: 28px; font-weight: 900;" >個人資料</p>
+        <p style="text-align: left; font-size: 28px; font-weight: 900;">個人資料</p>
         <hr>
         <sub class="sub1">會員姓名:</sub>
         <sub class="sub2">生日:</sub>
         <table style="background-color: gray;">
-          <tr>
-            <td>王小明</td>
-            <td>2001/11/01</td>
-          </tr>
+            <tr>
+                <td>王小明</td>
+                <td>2001/11/01</td>
+            </tr>
         </table>
         <sub class="sub1">會員信箱:</sub>
         <sub class="sub2">性別:</sub>
         <table style="background-color: gray;">
-          <tr>
-            <td>xiaoming@gmail.com</td>
-            <td  class="id_1"  style="text-align:left ;">&nbsp;&nbsp;&nbsp;男</td>
-          </tr>
+            <tr>
+                <td>xiaoming@gmail.com</td>
+                <td class="id_1" style="text-align:left ;">&nbsp;&nbsp;&nbsp;男</td>
+            </tr>
         </table>
         <sub class="sub1">連絡電話:</sub>
         <sub class="sub2">聯絡地址:</sub>
         <table style="background-color: gray;">
-          <tr>
-            <td>0912345678</td>
-            <td class="id_2">320桃園市中壢區中北路200號</td>
-          </tr>
+            <tr>
+                <td>0912345678</td>
+                <td class="id_2">320桃園市中壢區中北路200號</td>
+            </tr>
         </table>
-  
-        <p style="text-align: left; font-size: 28px; font-weight: 900;">個人資料編輯</p>
-        <hr>
-        <fieldset class="field_pos">
-            <form class="edit_pos" method="post">
-              <p>會員姓名: </p><input class="edit_input1" type="text" name="member">
-              <p>會員信箱: </p><input class="edit_input1" type="text" name="email">
-              <p>連絡電話: </p><input class="edit_input1" type="text" name="subject">
-              <p>連絡住址: </p><input class="edit_input1" type="text" name="subject">
-              <p class="ed">生日: <input class="edit_input2" type="date" name="selectdate" />&nbsp;&nbsp;&nbsp;性別: <input
-                  class="gender" type="radio" name="gender" value="male" />男生
+        <p style="text-align: left; font-size: 28px; font-weight: 900;">購買紀錄</p>
+        <table>
+            <td style="font-size: 24px; text-align: left;">日期</td>
+            <td style="font-size: 24px; text-align: left;">金額&nbsp;</td>
+            <td style="font-size: 24px; text-align: left;">商品名稱</td>
+            <td style="font-size: 24px; text-align: left;">數量<td>
+                <td>商品圖示</td>
+        </table>
+
+        <table >
+            <tr>
+                <td>2022/6/18</td>
+                <td>3790</td>
+                <td>Sauvage spray</td>
+                <td >1<td>
+                <td> <img style="max-width: 300px; min-height: 100px; border-radius: 15px;" src="picture/product3.jpg"></td>
+            </tr>
+            <table >
+                <tr>
+                    <td>2022/6/19</td>
+                    <td>6580</td>
+                    <td>Sauvage Parfum</td>
+                    <td>&nbsp;2<td>
+                    <td> <img style="max-width: 300px; min-height: 100px; border-radius: 15px;" src="picture/product2.jpg"></td>
+                </tr>
+
+
+
+    </div>
+    </table>
+
+
+    <p style="text-align: left; font-size: 28px; font-weight: 900;">個人資料編輯</p>
+    <hr>
+    <fieldset class="field_pos">
+        <form class="edit_pos" method="post">
+            <p>會員姓名: </p><input class="edit_input1" type="text" name="member">
+            <p>會員信箱: </p><input class="edit_input1" type="text" name="email">
+            <p>連絡電話: </p><input class="edit_input1" type="text" name="subject">
+            <p>連絡住址: </p><input class="edit_input1" type="text" name="subject">
+            <p class="ed">生日: <input class="edit_input2" type="date" name="selectdate" />&nbsp;&nbsp;&nbsp;性別: <input
+                    class="gender" type="radio" name="gender" value="male" />男生
                 <input type="radio" name="gender" value="female" />女生
-              </p>
-              <button class="btn">更改</button>
-            </form>
-          </fieldset>
-      </div>
+            </p>
+            <button class="btn">更改</button>
+        </form>
+    </fieldset>
+    </div>
 
 
 
@@ -184,7 +215,8 @@
             <div class="row">
                 <div class="col-md-4 text-left">
                     <h5 style="color:white">OURS</h5>
-                    <p style="line-height:35px;" class="left123"><a href="https://www1.cycu.edu.tw/" style="color:white">- SCHOOL -</a>
+                    <p style="line-height:35px;" class="left123"><a href="https://www1.cycu.edu.tw/"
+                            style="color:white">- SCHOOL -</a>
                         <br>
                         <a href="https://www.dior.com/zh_tw" style="color:white">- DIOR -</a>
                     </p>
